welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: identifier expected but integer literal found.
	return ( 7 : 00 )
                     ^alarmClock:5: error: ')' expected but '}' found.
}
^