welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ( vacation == true ) 
	return ( 7 : 00 )
	
}
